rs/macros/tests/ui/gservice_fails_no_handlers_or_extends_found.rs
use sails_macros::service;

struct MyService;

#[service]
impl MyService {}

#[tokio::main]
async fn main() {}
